tests/testfiles/passing/invalid_identifiers/keyword_as_id_typedef.c
/* Keyword as identifier: typedef */
int main() {
    int typedef;
    typedef = 42;
}